--- a/new/game/src/style/the-ocean-shore.css
+++ b/new/game/src/style/the-ocean-shore.css
@@ -1,14 +1,30 @@
 @media screen and (max-width: 1280px) { 
-    div.nav-bar 
+    div.product-info-block 
     {
-        width: 1200px;
-    } 
+        width: 800px;
+    }
+    div.news-feed
+    {
+        width: 800px;
+    }
+    div.news-entry 
+    {
+        width: 770px;
+    }
 } 
 @media screen and (max-width: 1140px) { 
-    div.nav-bar 
+    div.product-info-block 
     {
-        width: 1024px;
-    } 
+        width: 800px;
+    }
+    div.news-feed
+    {
+        width: 800px;
+    }
+    div.news-entry 
+    {
+        width: 770px;
+    }
 } 
 @media screen and (max-width: 992px) { 
     div.nav-bar 
