--- a/new/products/src/style.css
+++ b/new/products/src/style.css
@@ -22,7 +22,7 @@
     border-radius: 15px;
     border: 3px solid #1f1f1f;
 }
-c4ff02
+
 ::-webkit-scrollbar-thumb:hover {
     background-color: #deff73;
 }
@@ -36,6 +36,13 @@ c4ff02
     border-radius: 50px;
     width: 800px;
     height: 100px;
+    transition: all 0.3s ease;
+}
+
+.nav-bar:hover {
+    transition: all 0.3s ease;
+    border-radius: 25px;
+    color: #c4ff02;
 }
 
 html,
@@ -84,7 +91,7 @@ body {
     color: #1a1a1a;
     border-radius: 10px;
     transition: all 0.3s ease;
-    padding: 5px;
+    padding: 10px;
     font-family: 'NT-Sans-Bold';
     text-decoration: none;
     width: 90px;
@@ -94,6 +101,6 @@ body {
 .rg_button:hover {
     transition: all 0.3s ease;
     background-color: #c4ff02;
-    padding: 10px;
+    padding: 15px;
     font-family: 'NT-Sans-Regular';
 }
