--- a/new/src/style/style-new.css
+++ b/new/src/style/style-new.css
@@ -185,7 +185,7 @@ body {
 }
 
 .news-header-empty {
-    font-size: 30px;
+    font-size: 130px;
 }
 
 .product-header-empty {
@@ -206,6 +206,13 @@ body {
     justify-content: center;
     align-items: center;
     width: 550px;
+    transition: all 0.3s ease;
+    margin-left: 20px;
+}
+
+.nav-bar:hover {
+    transition: all 0.3s ease;
+    width: 500px;
 }
 
 a {
@@ -222,18 +229,16 @@ a:hover {
 }
 
 ::-webkit-scrollbar {
-    width: 15px;
+    width: 8px;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #002f39;
     border-radius: 15px;
 }
 
 ::-webkit-scrollbar-thumb {
     background-color: #00262e;
     border-radius: 15px;
-    border: 3px solid #002f39;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -252,7 +257,7 @@ a:hover {
     background-color: #002f39;
     border: solid 5px #00262e;
     border-radius: 25px;
-    width: 670px;
+    width: 900px;
     height: 650px;
     margin: 15px;
 }
@@ -268,7 +273,7 @@ a:hover {
     align-items: center;
     overflow: auto;
     height: 650px;
-    width: 650px;
+    width: 895px;
 }
 
 .product-text {
@@ -304,7 +309,7 @@ a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 550px;
+    width: 780px;
     height: 100px, auto;
 }
 
@@ -314,7 +319,7 @@ a:hover {
     background-color: #002f39;
     border: solid 5px #00262e;
     border-radius: 25px;
-    width: 670px;
+    width: 900px;
     height: 650px;
     margin: 15px;
 }
@@ -330,7 +335,7 @@ a:hover {
     align-items: center;
     overflow: auto;
     height: 650px;
-    width: 650px;
+    width: 895px;
 }
 
 .news-header {
@@ -365,8 +370,8 @@ a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 550px;
-    height: 100px, auto;
+    width: 780px;
+    height: 300px, auto;
 }
 
 /* footer styles */
