--- a/new/src/style/style-new.css
+++ b/new/src/style/style-new.css
@@ -177,6 +177,14 @@
     {
         width: 300px;
     }
+    div.news-header-empty
+    {
+        font-size: 130px;
+    }
+    div.product-header-empty
+    {
+        font-size: 500px;
+    }
 }
 /* system styles end */
 
@@ -186,11 +194,11 @@ body {
 }
 
 .news-header-empty {
-    font-size: 130px;
+    font-size: 5px;
 }
 
 .product-header-empty {
-    font-size: 135px;
+    font-size: 110px;
 }
 
 .RE_Logo {
