--- a/new/src/style/style-new.css
+++ b/new/src/style/style-new.css
@@ -140,7 +140,8 @@
 @media screen and (max-width: 680px) { 
     div.nav-bar 
     {
-        width: 380px;
+        margin-left: 15px;
+        width: 360px;
         height: 70px;
     }
     a
