Fixed an issue with the Fail file

--- a/new/src/style/style-new.css
+++ b/new/src/style/style-new.css
@@ -235,6 +235,7 @@ a:hover {
     background-color: #002f39;
     color: #fff;
     border-radius: 25px;
+    padding: 5px;
     display: flex;
     justify-content: center;
     align-content: center;
