--- a/new/game/src/style/the-ocean-shore.css
+++ b/new/game/src/style/the-ocean-shore.css
@@ -39,15 +39,20 @@
     }
     div.product-info-block 
     {
-        width: 300px;
+        width: 350px;
     }
     div.news-feed
     {
-        width: 325px;
+        width: 370px;
+        height: 300px;
     }
     div.news-entry 
     {
-        width: 295px;
+        width: 340px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-self: center;
     }
 }
 
@@ -60,20 +65,6 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-}
-
-.nav-bar {
-    background-color: #002f39;
-    border: solid 5px #001c22;
-    border-radius: 25px;
-    height: 100px;
-    width: 500px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    left: auto;
-    z-index: 10;
 }
 
 .re_logo {
