--- a/new/src/style/style-new.css
+++ b/new/src/style/style-new.css
@@ -137,13 +137,7 @@
     }
 }
 
-@media screen and (max-width: 680px) { 
-    div.nav-bar 
-    {
-        margin-left: 15px;
-        width: 360px;
-        height: 70px;
-    }
+@media only screen and (max-width: 680px) { 
     a
     {
         font-size: 20px;
@@ -153,6 +147,8 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
+        align-self: center;
     }
     div.product-info 
     {
@@ -178,6 +174,12 @@
     {
         width: 300px;
     }
+    h1.product-header-empty {
+        font-size: 120px;
+    }
+    h1.news-header-empty {
+        font-size: 40px;
+    }
 }
 /* system styles end */
 
@@ -187,40 +189,16 @@ body {
 }
 
 .news-header-empty {
-    font-size: 15px;
+    font-size: 0px;
 }
 
 .product-header-empty {
-    font-size: 110px;
-}
-
-.RE_Logo {
-    border-radius: 25px;
-    margin: 5px;
-}
-
-.nav-bar {
-    background-color: #002f39;
-    border: solid 5px #00262e;
-    border-radius: 25px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 550px;
-    transition: all 0.3s ease;
-    margin-left: 20px;
-}
-
-.nav-bar:hover {
-    transition: all 0.3s ease;
-    width: 500px;
+    font-size: 90px;
 }
 
 a {
     font-family: 'Poppins';
     color: #fff;
-    margin: 10px;
     text-decoration: none;
     transition: all 0.3s ease;
 }
@@ -236,28 +214,12 @@ a:hover {
     color: #fff;
     border-radius: 25px;
     padding: 5px;
+    margin: 5px;
     display: flex;
     justify-content: center;
     align-content: center;
     flex-direction: column;
     text-align: center;
-}
-
-::-webkit-scrollbar {
-    width: 8px;
-}
-
-::-webkit-scrollbar-track {
-    border-radius: 15px;
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: #00262e;
-    border-radius: 15px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: #001c22;
 }
 
 .product-news-block {
@@ -388,70 +350,3 @@ a:hover {
     width: 780px;
     height: 300px, auto;
 }
-
-/* footer styles */
-
-footer {
-    text-align: center;
-    padding-top: 70px;
-}
-
-.re-footer {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.footer-link {
-    font-size: 20px;
-    font-family: 'Poppins';
-    text-align: center;
-    margin: 15px;
-    padding: 5px;
-    border-radius: 15px;
-}
-
-.footer-h {
-    font-size: 25px;
-    font-family: 'Poppins';
-    color: #fff;
-}
-
-.footer-link-tw {
-    transition: all 0.3s ease;
-    color: #fff;
-    font-size: 20px;
-}
-
-.footer-link-tw:hover {
-    transition: all 0.3s ease;
-    color: #00acee;
-    font-size: 20px;
-}
-
-.footer-link-yt {
-    transition: all 0.3s ease;
-    color: #fff;
-    font-size: 20px;
-}
-
-.footer-link-yt:hover {
-    transition: all 0.3s ease;
-    color: #c4302b;
-    font-size: 20px;
-}
-
-.footer-link-vk {
-    transition: all 0.3s ease;
-    color: #fff;
-    font-size: 20px;
-}
-
-.footer-link-vk:hover {
-    transition: all 0.3s ease;
-    color: #4C75A3;
-    font-size: 20px;
-}
-
-/* footer styles end */
