--- a/new/src/style/style-news.css
+++ b/new/src/style/style-news.css
@@ -1,43 +1,190 @@
+@media only screen and (max-width: 680px) { 
+    div.news-block {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-self: center;
+    }
+    div.top_block,
+    div.bottom_block {
+        width: 340px;
+    }
+    div.mini_n_b {
+        width: 330px;
+    }
+    div.news_r_b,
+    div.news-content{
+        width: 350px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-self: center;
+        }
+    div.news-a {
+        width: 340px;
+    }
+    div.news-card_b {
+        display: flex;
+        width: 310px;
+    }
+    p.news-b-t {
+        display: flex;
+        font-size: 9px;
+        flex-direction: column;
+    }
+    h1.news-h-b {
+        display: flex;
+        font-size: 15px;
+    }
+    div.group_n {
+        flex-direction: column;
+    }
+    div.news-info{
+        flex-direction: column;
+    }
+    img.news-img-b {
+        height: 90px !important;
+        width: 90px !important;
+    }
+}
+
 html,
 body {
+    background-color: #001c22;
     font-family: 'Poppins';
 }
 
-.news-f {
-    background-color: #002f39;
-    border: solid 5px #00262e;
-    border-radius: 25px;
-    width: 1860px;
-    height: 780px;
-    margin: 15px;
-    margin-right: 3px;
+.news-block {
+    display:flex;
+    flex-direction: row;
+    margin: 5px;
 }
 
-.news-h-f {
-    width: 1850px;
-    height: 760px;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    overflow: auto;
-}
-
-.news-card-f {
-    background-color: #00262e;
-    width: auto;
-    height: 150px, auto;
-    margin: 10px;
+.logo {
     text-align: center;
-    border-radius: 25px;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+/* left block */
+
+.news_l_b {
     display: flex;
     flex-direction: column;
-    align-content: center;
 }
 
-.news-header {
-    font-size: 40px;
+.top_block,
+.bottom_block {
+    background-color: #002f39;
+    color: #fff;
+    width: 300px;
+    padding: 5px;
+    border-radius: 25px;
+    margin: 5px;
 }
 
-.news-text {
-    font-size: 30px;
+.bottom_block {
+    height: 780px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.mini_n_b {
+    width: 290px;
+    height: 100px;
+    border-radius: 25px;
+    padding: 5px;
+    margin-bottom: 5px;
+    font-size: 12px;
+    z-index: 9;
+    background-color: #00262e;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    transition: all 0.3s ease;
+}
+
+.mini_n_b:hover {
+    background-color: #fff;
+    color: #00262e;
+    width: 320px;
+    height: 100px;
+    transition: all 0.3s ease;
+}
+
+.group_n {
+    display: flex;
+    flex-direction: row;
+}
+
+/* right block */
+
+.news-content {
+    background-color: #002f39;
+    width: 1550px;
+    height: 900px;
+    border-radius: 25px;
+}
+
+.news-a {
+    margin: 5px;
+    width: 1540px;
+    height: 890px;
+    overflow: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.news-card_b {
+    padding: 5px;
+    margin: 5px;
+    border-radius: 25px;
+    width: 745px;
+    height: 200px;
+    background-color: #00262e;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+.news-img-b {
+    height: 190px !important;
+    width: 190px !important;
+    border-radius: 25px;
+    margin-right: 15px;
+    position: relative;
+    top: 3px;
+    border: 5px solid #001c22;
+}
+
+.news-link {
+    margin: 0;
+    padding: 0;
+    transition: all 0.3s ease;
+    color: aqua;
+}
+
+.news-link:hover {
+    color: #fff;
+    transition: all 0.3s ease;}
+
+.news-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.news-b-t {
+    font-size: 15px;
+}
+
+.news-h-b {
+    font-size: 20px;
 }
