--- a/new/src/style/adaptation/adaptation.css
+++ b/new/src/style/adaptation/adaptation.css
@@ -351,46 +351,23 @@
 }
 /* nsy page */
 /* rg page */
-@media screen and (max-width: 1400px) { 
-    div.rg_img
-    {
-        width: 250px;
-        height: 250px;
+@media screen and (max-width: 680px) { 
+    div.b {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 460px;
     }
-} 
-@media screen and (max-width: 1280px) { 
-    div.rg_img
-    {
-        width: 250px;
-        height: 250px;
+    div.info-right {
+        width: 420px;
     }
-}
-
-@media screen and (max-width: 980px) { 
-    div.nav-bar 
-    {
-        width: 350px;
+    img.ss-img {
+        width: 250px !important;
+        height: 400px !important;
     }
-    div.rg_img
-    {
-        width: 250px;
-        height: 250px;
-    }
-}
-
-@media screen and (max-width: 700px) { 
-    div.nav-bar 
-    {
-        width: 350px;
-    }
-    div.rg_header_nb 
-    {
-        font-size: 30px;
-    }
-    div.rg_img 
-    {
-        width: 250px;
-        height: 250px;
+    img.d-img {
+        width: 250px !important;
+        height: 300px !important;
     }
 }
 /* rg page */
