--- a/new/src/style/adaptation/adaptation.css
+++ b/new/src/style/adaptation/adaptation.css
@@ -356,18 +356,20 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 460px;
+        width: 320px;
     }
     div.info-right {
-        width: 420px;
+        width: 300px;
     }
     img.ss-img {
-        width: 250px !important;
-        height: 400px !important;
+        width: 150px !important;
+        height: 200px !important;
+        border: solid 5px #353925;
     }
     img.d-img {
-        width: 250px !important;
-        height: 300px !important;
+        width: 150px !important;
+        height: 150px !important;
+        border: solid 5px #353925;
     }
 }
 /* rg page */
