--- a/new/products/src/style.css
+++ b/new/products/src/style.css
@@ -112,3 +112,13 @@ p {
     color: #1a1a1a;
     transition: all 0.3s ease;
 }
+
+.web_h {
+    text-align: center;
+    color: #fff;
+    border: solid 5px #c4ff02;
+    border-radius: 25px;
+    margin: 10px;
+    padding: 10px;
+    width: 200px;
+}
