--- a/new/test/src/style/style.css
+++ b/new/test/src/style/style.css
@@ -1,3 +1,15 @@
+@media screen and (min-width: 1200px) {
+    header {
+        font-size: 20px !important;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    header {
+        font-size: 15px !important;
+    }
+}
+
 body {
     background: #1a1a1a;
     font-family: 'Fira Mono', monospace;
@@ -6,11 +18,13 @@ body {
 header {
     display: flex;
     flex-direction: row;
+    align-items: center;
     background-color: #202020;
     font-family: 'Fira Mono', monospace;
     border-radius: 10px;
-    padding: 10px;
+    padding: 5px;
     margin: 5px;
+    font-size: 20px;
 }
 
 a {
