Header font size fix X2

--- a/new/test/src/style/style.css
+++ b/new/test/src/style/style.css
@@ -10,6 +10,12 @@
     }
 }
 
+@media screen and (max-width: 420px) {
+    header {
+        font-size: 13px !important;
+    }
+}
+
 body {
     background: #1a1a1a;
     font-family: 'Fira Mono', monospace;
