--- a/new/test/src/style/style.css
+++ b/new/test/src/style/style.css
@@ -58,8 +58,7 @@ select {
 }
 
 .text-p,
-.lng-about_us_desc,
-.lng-sourcecode {
+.lng-about_us_desc {
     background-color: #00000040;
     color: #fff;
     font-family: 'Fira Mono', monospace;
