--- a/new/src/style/style.css
+++ b/new/src/style/style.css
@@ -21,15 +21,18 @@
 }
 
 body {
-    background: #1a1a1a;
-    font-family: 'Fira Mono', monospace;
+  padding: 0%;
+  margin: 0%;
+  background-image: url(../img/Reverse/ReverseNewLogoHeader_3.png);
+  background-color: black;
+  font-family: 'Fira Mono', monospace;
 }
 
 header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: #202020;
+    backdrop-filter: blur(10px);
     font-family: 'Fira Mono', monospace;
     border-radius: 10px;
     padding: 5px;
@@ -45,7 +48,7 @@ a {
 }
 
 a:hover {
-    color: greenyellow;
+    color: rgb(128, 128, 128);
     padding: 10px;
     transition: 0.3s;
 }
@@ -70,7 +73,7 @@ select {
 
 .text-p:hover,
 .lng-about_us_desc:hover {
-    color: greenyellow;
+    color: rgb(128, 128, 128);
     padding: 15px;
     transition: 0.3s;
 }
@@ -108,6 +111,7 @@ select {
   transition: 0.3s;
   margin: 5px 0px;
   padding: 5px;
+  backdrop-filter: blur(10px);
 }
 
 .list a:hover {
@@ -149,6 +153,7 @@ select {
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: auto;
+  backdrop-filter: blur(10px);
 }
 
 .listname {
@@ -191,7 +196,7 @@ select {
 .contacts,
 .website_info,
 .index-error {
-    background-color: #202020;
+    backdrop-filter: blur(10px);
     color: #fff;
     border-radius: 10px;
     padding: 10px;
