--- a/new/src/style/style.css
+++ b/new/src/style/style.css
@@ -21,12 +21,12 @@
 }
 
 body {
-  padding: 0%;
-  margin: 0%;
-  background-image: url(../img/Reverse/ReverseNewLogoHeader_3.png);
-  background-color: black;
-  background-attachment: fixed;
-  font-family: 'Fira Mono', monospace;
+    padding: 0%;
+    margin: 0%;
+    background-image: url(../img/Reverse/ReverseNewLogoHeader_3.png);
+    background-color: black;
+    background-attachment: fixed;
+    font-family: 'Fira Mono', monospace;
 }
 
 header {
@@ -66,13 +66,34 @@ select {
     background-color: #00000040;
     color: #fff;
     font-family: 'Fira Mono', monospace;
-    border-radius: 10px;
     padding: 10px;
     margin: 5px;
     transition: 0.3s;
 }
 
+.text-p-up {
+    background-color: #00000040;
+    color: #fff;
+    font-family: 'Fira Mono', monospace;
+    border-radius: 10px 10px 0px 0px;
+    padding: 10px;
+    margin: 5px;
+    transition: 0.3s;
+}
+
+.text-p-down {
+  background-color: #00000040;
+  color: #fff;
+  font-family: 'Fira Mono', monospace;
+  border-radius: 0px 0px 10px 10px;
+  padding: 10px;
+  margin: 5px;
+  transition: 0.3s;
+}
+
 .text-p:hover,
+.text-p-up:hover,
+.text-p-down:hover,
 .lng-about_us_desc:hover {
     color: rgb(128, 128, 128);
     padding: 15px;
