--- a/src/style/style.css
+++ b/src/style/style.css
@@ -171,12 +171,7 @@ select:hover {
 .listdesc,
 .lng-storm_desc,
 .lng-launcher_desc,
-.lng-teamdesc-bblckk,
-.lng-teamdesc-bebreef,
-.lng-teamdesc-geniy,
-.lng-teamdesc-steven56,
-.lng-teamdesc-dead_bebrax,
-.lng-teamdesc-okokus {
+.lng-teamdesc-cherrymerry {
   font-size: 10px;
   color: #848484;
   overflow: hidden;
